[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycausal-inference"    # <-- PyPI package name (recommended)
version = "0.1.0"
description = "A causal inference toolkit with ATE, IPW, doubly robust, and meta-learners."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

authors = [
    {name = "Leon Tan"}
]

keywords = ["causal inference", "treatment effect", "statistics", "machine learning"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Information Analysis"
]

dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "lightgbm>=3.3",
    "patsy>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/LTan00/pycausal-inference"
Repository = "https://github.com/LTan00/pycausal-inference"
Issues = "https://github.com/LTan00/pycausal-inference/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
